--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>About - Dan's Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,22 +26,38 @@
 
     <main>
         <div class="container">
-            <section class="hero" id="home">
+            <section class="hero">
                 <div class="hero-content">
                     <div class="profile-photo">
                         <img src="images/daniel_yellow.jpg" alt="Dan's profile picture">
                     </div>
-                    <h1>Hello World! 👋</h1>
-                    <p>Welcome to my personal website. I'm excited to share my journey with you.</p>
-                    <a href="#about" class="cta-button">Learn More</a>
+                    <h1>About Me</h1>
+                    <p>Get to know me better and learn about my journey in technology.</p>
                 </div>
             </section>
 
             <section class="content-section">
-                <h2>Welcome to My Portfolio</h2>
+                <h2>My Story</h2>
                 <p>Hello! I'm Dan, a passionate developer and creative problem-solver. I love building innovative solutions and exploring new technologies.</p>
                 <p>With a background in software development and a keen eye for design, I enjoy creating elegant solutions that make a difference. I believe in continuous learning and pushing the boundaries of what's possible.</p>
                 <p>When I'm not coding, you can find me exploring new technologies, contributing to open source projects, or sharing knowledge with the developer community.</p>
+            </section>
+
+            <section class="content-section">
+                <h2>Skills & Expertise</h2>
+                <p>I specialize in modern web development technologies and best practices:</p>
+                <ul>
+                    <li>Frontend Development (HTML, CSS, JavaScript)</li>
+                    <li>Backend Development</li>
+                    <li>UI/UX Design</li>
+                    <li>Problem Solving</li>
+                    <li>Team Collaboration</li>
+                </ul>
+            </section>
+
+            <section class="content-section">
+                <h2>What I'm Working On</h2>
+                <p>Currently, I'm focused on building personal projects and contributing to the developer community. I'm always open to new opportunities and collaborations.</p>
             </section>
         </div>
     </main>
@@ -56,6 +72,7 @@
             </div>
         </div>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html> 
