--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>Projects - Dan's Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,22 +26,28 @@
 
     <main>
         <div class="container">
-            <section class="hero" id="home">
+            <section class="hero">
                 <div class="hero-content">
-                    <div class="profile-photo">
-                        <img src="images/daniel_yellow.jpg" alt="Dan's profile picture">
-                    </div>
-                    <h1>Hello World! 👋</h1>
-                    <p>Welcome to my personal website. I'm excited to share my journey with you.</p>
-                    <a href="#about" class="cta-button">Learn More</a>
+                    <h1>My Projects</h1>
+                    <p>Here are some of the projects I've been working on and am proud to share.</p>
                 </div>
             </section>
 
             <section class="content-section">
-                <h2>Welcome to My Portfolio</h2>
-                <p>Hello! I'm Dan, a passionate developer and creative problem-solver. I love building innovative solutions and exploring new technologies.</p>
-                <p>With a background in software development and a keen eye for design, I enjoy creating elegant solutions that make a difference. I believe in continuous learning and pushing the boundaries of what's possible.</p>
-                <p>When I'm not coding, you can find me exploring new technologies, contributing to open source projects, or sharing knowledge with the developer community.</p>
+                <h2>Personal Website</h2>
+                <p>This website itself! Built with modern HTML, CSS, and JavaScript. Features a clean, responsive design inspired by The Faux Flower Company's elegant aesthetic.</p>
+                <p><strong>Technologies:</strong> HTML5, CSS3, JavaScript</p>
+                <p><strong>Features:</strong> Responsive design, hamburger menu, separate pages</p>
+            </section>
+
+            <section class="content-section">
+                <h2>More Projects Coming Soon</h2>
+                <p>I'm constantly working on new projects and will be adding them here as they're completed. Stay tuned for updates!</p>
+            </section>
+
+            <section class="content-section">
+                <h2>Open Source Contributions</h2>
+                <p>I believe in giving back to the developer community. I'm always looking for opportunities to contribute to open source projects that align with my interests and skills.</p>
             </section>
         </div>
     </main>
@@ -56,6 +62,7 @@
             </div>
         </div>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html> 
