added previous work experience

--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,13 @@
             </section>
 
             <section class="content-section">
+                <h2>OpenSolar 3D Studio</h2>
+                <p>Leading the development of OpenSolar's 3D Studio, a cutting-edge visualization tool for solar installers. This project combines advanced 3D graphics with practical solar system design.</p>
+                <p><strong>Technologies:</strong> THREE.js, JavaScript, WebGL, React</p>
+                <p><strong>Features:</strong> 3D solar system visualization, interactive design tools, real-time rendering</p>
+            </section>
+
+            <section class="content-section">
                 <h2>Personal Website</h2>
                 <p>This website itself! Built with modern HTML, CSS, and JavaScript. Features a clean, responsive design inspired by The Faux Flower Company's elegant aesthetic.</p>
                 <p><strong>Technologies:</strong> HTML5, CSS3, JavaScript</p>
