--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                 
                 <div class="job-info">
                     <div class="job-header">
-                        <img src="logos/opensolar.svg" alt="OpenSolar" class="company-logo">
+                        <img src="logos/opensolar.png" alt="OpenSolar" class="company-logo">
                         <div>
                             <h3>Senior Software Engineer at OpenSolar</h3>
                             <p class="job-location">📍 Remote in Hong Kong | June 2025 - Present</p>
@@ -79,7 +79,7 @@
 
                 <div class="job-info">
                     <div class="job-header">
-                        <img src="logos/midsummer.svg" alt="Midsummer Energy" class="company-logo">
+                        <img src="logos/midsummer.jpg" alt="Midsummer Energy" class="company-logo">
                         <div>
                             <h3>Web Developer at Midsummer Energy</h3>
                             <p class="job-location">📍 Cambridge, England | June 2022 - March 2025</p>
@@ -96,7 +96,7 @@
 
                 <div class="job-info">
                     <div class="job-header">
-                        <img src="logos/cambridge.svg" alt="University of Cambridge" class="company-logo">
+                        <img src="logos/cambridge.png" alt="University of Cambridge" class="company-logo">
                         <div>
                             <h3>Mathematics Supervisor at University of Cambridge</h3>
                             <p class="job-location">📍 Cambridge, England | September 2019 - June 2022</p>
@@ -111,8 +111,13 @@
                 </div>
 
                 <div class="job-info">
-                    <h3>Intern Data Analyst at Landesbank Baden-Württemberg</h3>
-                    <p class="job-location">📍 London, England | June 2016 - September 2016</p>
+                    <div class="job-header">
+                        <img src="logos/lbbw.jpg" alt="Landesbank Baden-Württemberg" class="company-logo">
+                        <div>
+                            <h3>Intern Data Analyst at Landesbank Baden-Württemberg</h3>
+                            <p class="job-location">📍 London, England | June 2016 - September 2016</p>
+                        </div>
+                    </div>
                     <p>I made predictions for bond sales and purchases based on a large training data set (100,000+ entries) using Machine Learning techniques such as random forest and XGBoost. The code was written in the statistical package R.</p>
                     <ul>
                         <li><strong>Machine Learning:</strong> Random Forest, XGBoost algorithms</li>
@@ -123,8 +128,13 @@
                 </div>
 
                 <div class="job-info">
-                    <h3>Intern Content Scientist at Sparx</h3>
-                    <p class="job-location">📍 Exeter, England | June 2015 - September 2015</p>
+                    <div class="job-header">
+                        <img src="logos/sparx.png" alt="Sparx" class="company-logo">
+                        <div>
+                            <h3>Intern Content Scientist at Sparx</h3>
+                            <p class="job-location">📍 Exeter, England | June 2015 - September 2015</p>
+                        </div>
+                    </div>
                     <p>I helped develop an educational iPad app that aims to teach children GCSE Mathematics. My role was to write questions pedagogically and to analyse the data from the students' attempts using the statistical language R.</p>
                     <ul>
                         <li><strong>Educational Technology:</strong> Developed iPad app for GCSE Mathematics</li>
@@ -140,7 +150,7 @@
                 
                 <div class="education-item">
                     <div class="education-header">
-                        <img src="logos/cambridge.svg" alt="University of Cambridge" class="education-logo">
+                        <img src="logos/cambridge.png" alt="University of Cambridge" class="education-logo">
                         <div>
                             <h3>University of Cambridge</h3>
                             <p class="education-details">Mathematics - MA, MMath, Class I, Distinction</p>
@@ -151,7 +161,7 @@
 
                 <div class="education-item">
                     <div class="education-header">
-                        <img src="logos/bath.svg" alt="University of Bath" class="education-logo">
+                        <img src="logos/bath.png" alt="University of Bath" class="education-logo">
                         <div>
                             <h3>University of Bath</h3>
                             <p class="education-details">Mathematics - MRes, MPhil, Distinction</p>
@@ -162,7 +172,7 @@
 
                 <div class="education-item">
                     <div class="education-header">
-                        <div class="education-logo-placeholder">CIS</div>
+                        <img src="logos/cis.jpeg" alt="Chinese International School" class="education-logo">
                         <div>
                             <h3>Chinese International School, Hong Kong</h3>
                             <p class="education-details">International Baccalaureate, 43/45</p>
