--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Dan's Personal Website</title>
+    <link rel="preload" href="head-common.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="head-common.css"></noscript>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
