make hero container full width

--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
     </header>
 
     <main>
-        <div class="container">
-            <section class="hero">
+        <section class="hero">
+            <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
                         <img src="images/daniel_yellow.jpg" alt="Dan's profile picture">
@@ -36,7 +36,8 @@
                     <h1>About Me</h1>
                     <p>Get to know me better and learn about my journey in technology.</p>
                 </div>
-            </section>
+            </div>
+        </section>
 
             <section class="content-section">
                 <h2>My Story</h2>
