--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header>
 
     <main>
-        <div class="container">
-            <section class="hero" id="home">
+        <section class="hero" id="home">
+            <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
                         <img src="images/daniel_yellow.jpg" alt="Dan's profile picture">
@@ -37,7 +37,8 @@
                     <p>Welcome to my personal website. I'm excited to share my journey with you.</p>
                     <a href="#about" class="cta-button">Learn More</a>
                 </div>
-            </section>
+            </div>
+        </section>
 
             <section class="content-section">
                 <h2>Welcome to My Portfolio</h2>
