--- a/projects.html
+++ b/projects.html
@@ -27,13 +27,14 @@
     </header>
 
     <main>
-        <div class="container">
-            <section class="hero">
+        <section class="hero">
+            <div class="container">
                 <div class="hero-content">
                     <h1>My Projects</h1>
                     <p>Here are some of the projects I've been working on and am proud to share.</p>
                 </div>
-            </section>
+            </div>
+        </section>
 
             <section class="content-section">
                 <h2>OpenSolar 3D Studio</h2>
