--- a/contact.html
+++ b/contact.html
@@ -27,13 +27,14 @@
     </header>
 
     <main>
-        <div class="container">
-            <section class="hero">
+        <section class="hero">
+            <div class="container">
                 <div class="hero-content">
                     <h1>Get In Touch</h1>
                     <p>I'd love to hear from you! Whether you want to collaborate on a project, share ideas, or just say hello, feel free to reach out.</p>
                 </div>
-            </section>
+            </div>
+        </section>
 
             <section class="content-section">
                 <h2>Let's Connect</h2>
