left right padding for mobile text

--- a/about.html
+++ b/about.html
@@ -39,14 +39,13 @@
             </div>
         </section>
 
+        <div class="container">
             <section class="content-section">
                 <h2>My Story</h2>
                 <p>Hello! I'm Dan, a passionate developer and creative problem-solver. I love building innovative solutions and exploring new technologies.</p>
                 <p>With a background in software development and a keen eye for design, I enjoy creating elegant solutions that make a difference. I believe in continuous learning and pushing the boundaries of what's possible.</p>
                 <p>When I'm not coding, you can find me exploring new technologies, contributing to open source projects, or sharing knowledge with the developer community.</p>
             </section>
-
-
 
             <section class="content-section">
                 <h2>Skills & Expertise</h2>
