--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </div>
         </section>
 
+        <div class="container">
             <section class="content-section">
                 <h2>Welcome to My Portfolio</h2>
                 <p>Hello! I'm Dan, a passionate developer and creative problem-solver. I love building innovative solutions and exploring new technologies.</p>
