--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,7 @@
             </div>
         </section>
 
+        <div class="container">
             <section class="content-section">
                 <h2>OpenSolar 3D Studio</h2>
                 <p>Leading the development of OpenSolar's 3D Studio, a cutting-edge visualization tool for solar installers. This project combines advanced 3D graphics with practical solar system design.</p>
