--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
             </div>
         </section>
 
+        <div class="container">
             <section class="content-section">
                 <h2>Let's Connect</h2>
                 <p>I'm always open to new opportunities, collaborations, and interesting conversations. Don't hesitate to reach out!</p>
