--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Dan's Personal Website</title>
+    <title>About - Daniel's Personal Website</title>
     <link rel="preload" href="head-common.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="head-common.css"></noscript>
     <link rel="stylesheet" href="styles.css">
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">Dan</div>
+            <div class="logo">Daniel</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
-                        <img src="images/daniel_yellow.jpg" alt="Dan's profile picture">
+                        <img src="images/daniel_yellow.jpg" alt="Daniel's profile picture">
                     </div>
                     <h1>About Me</h1>
                     <p>Get to know me better and learn about my journey in technology.</p>
