--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>Daniel's Personal Website</title>
     <link rel="preload" href="head-common.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="head-common.css"></noscript>
     <link rel="stylesheet" href="styles.css">
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">Dan</div>
+            <div class="logo">Daniel</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
-                        <img src="images/daniel_yellow.jpg" alt="Dan's profile picture">
+                        <img src="images/daniel_yellow.jpg" alt="Daniel's profile picture">
                     </div>
                     <h1>Hello World! 👋</h1>
                     <p>Welcome to my personal website. I'm excited to share my journey with you.</p>
@@ -43,7 +43,7 @@
         <div class="container">
             <section class="content-section">
                 <h2>Welcome to My Portfolio</h2>
-                <p>Hello! I'm Dan, a passionate developer and creative problem-solver. I love building innovative solutions and exploring new technologies.</p>
+                <p>Hello! I'm Daniel, a passionate developer and creative problem-solver. I love building innovative solutions and exploring new technologies.</p>
                 <p>With a background in software development and a keen eye for design, I enjoy creating elegant solutions that make a difference. I believe in continuous learning and pushing the boundaries of what's possible.</p>
                 <p>When I'm not coding, you can find me exploring new technologies, contributing to open source projects, or sharing knowledge with the developer community.</p>
             </section>
@@ -52,7 +52,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Dan. All rights reserved.</p>
+            <p>&copy; 2024 Daniel. All rights reserved.</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/dn390/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/dngzz1" target="_blank">GitHub</a>
