add extra profile picture

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
-                        <img src="images/daniel_yellow.jpg" alt="Daniel's profile picture">
+                        <img src="images/daniel_pink.jpeg" alt="Daniel's profile picture">
                     </div>
                     <h1>About Me</h1>
                     <p>Get to know me better and learn about my journey in technology.</p>
