--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="profile-photo">
                         <img src="images/daniel_yellow.jpg" alt="Daniel's profile picture">
                     </div>
-                    <h1>Hello World! 👋</h1>
+                    <h1>Hi there!</h1>
                     <p>Welcome to my personal website. I'm excited to share my journey with you.</p>
                     <a href="#about" class="cta-button">Learn More</a>
                 </div>
