make profile picture larger when clicked on

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
-                        <img src="images/daniel_pink.jpeg" alt="Daniel's profile picture">
+                        <img src="images/daniel_hood.jpeg" alt="Daniel's profile picture">
                     </div>
                     <h1>About Me</h1>
                     <p>Get to know me better and learn about my journey in technology.</p>
@@ -196,6 +196,14 @@
             </div>
         </div>
     </footer>
+
+    <!-- Image Modal -->
+    <div id="imageModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <img id="modalImage" src="" alt="Enlarged profile picture">
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
