--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <h1>Hi there!</h1>
                     <p>Welcome to my personal website. I'm excited to share my journey with you.</p>
-                    <a href="#about" class="cta-button">Learn More</a>
+                    <a href="about.html" class="cta-button">Learn More</a>
                 </div>
             </div>
         </section>
@@ -60,6 +60,15 @@
             </div>
         </div>
     </footer>
+
+    <!-- Image Modal -->
+    <div id="imageModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <img id="modalImage" src="" alt="Enlarged profile picture">
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html> 
