move CV to new page

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="cv.html">CV</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
             <div class="hamburger">
@@ -41,147 +42,31 @@
         <div class="container">
             <section class="content-section">
                 <h2>My Story</h2>
-                <p>Hello! I'm Dan, a passionate developer and creative problem-solver. I love building innovative solutions and exploring new technologies.</p>
-                <p>With a background in software development and a keen eye for design, I enjoy creating elegant solutions that make a difference. I believe in continuous learning and pushing the boundaries of what's possible.</p>
-                <p>When I'm not coding, you can find me exploring new technologies, contributing to open source projects, or sharing knowledge with the developer community.</p>
+                <p>For the first 25 years of my life, I believed Mathematics was my destiny. Throughout secondary school, I was the go-to person for Mathematics and Physics. Studying at Cambridge University was also a breeze. I enjoyed the intellectual environment and had high hopes for a career in academia.</p>
+                <p>I received a scholarship to study a PhD at the University of Bath, where I decided to major in Analysis and Probability. Alongside research, I also tutored first- and second-year undergraduates in groups of 10-20 students.</p>
+                <p>Soon I realized that I enjoyed teaching far more than research. The immediate impact of my teaching was much more tangible than the ambiguous and aimlessness of research. I explained abstract mathematics concepts in vivid metaphors and stories, and students from other classes flocked to my tutorials.</p>
+                <p>One day, about 1.5 years into my PhD, I broke the news to my supervisors that I'd like to pursue teaching instead. While long-term teaching opportunities such as Teaching Fellows exist within academia, without contributing to research, the career path was suboptimal. I decided to enroll in a PGCE program to become a qualified Mathematics secondary school teacher.</p>
+                <p>I successfully got an offer from Bath Spa University for a funded position as a Mathematics teacher trainee. The interview process was surprisingly pleasant. I was tasked to pick any topic to teach to a panel of teachers, and I chose to play Wordle with them before it was well-known, and explained how this game could be used to teach probability.</p>
+                <p>However, things had an unexpected turn. My Director of Studies at Magdalene College, University of Cambridge offered me a position to teach as a Mathematics supervisor, as the previous supervisor had decided to retire. As the opportunity was too good to pass up, I went for it as a gap year, with the intention to reapplying to a PGCE the year after.</p>
+                <p>And so I relocated back to Cambridge, and inherited the batch of students from the previous supervisor. The format was slightly different as Cambridge offers one-on-one or one-on-two classes, so I adapted my teaching style to be more tailored and interactive then the lecture-based style from my time at Bath. The experience was positive, and I developed good relationships with my students.</p>
+                <p>Then COVID-19 hit. We moved all our classes online, and I continued teachimg my students via Zoom. Throughout the pandemic, I developed my own set of materials, wrote my own collection of practice questions, and layed them out neatly in LaTex format. It was also then that I started a personal website for my students to access my materials.</p>
+                <p>Due to the situation, I was unable to go ahead with my plan I had with the PGCE. Schools enforced strict social distancing rules and classroom life was ever the more disrupted. I decided to continue teaching as a supervisor at Cambridge, picking up more subjects and students from other colleges. In reality, there is a chronic shortage of supervisors at Cambridge, and Directors of Studies from various colleges were more than happy to have me.</p>
+                <p>It was at this time that I also stepped onto the interviewing panel for college admissions for Downing College. I wrote interview questions of escalating difficulty, and interviewed the candidates via Zoom. What struck me was the variance of aptitude of the candidates. Some of the candidates were so frightened by the whole process that they barely squeaked out any sensible utterances. On the other hand, some candidates breezed through our questions. One even outsmarted us by providing a solution so clever that we had to dissect after the interview.</p>
+                <p>Being a supervisor and interviewer came with exceptional privileges. I had dining rights at Downing College, where I could sit at the high table alongside with other professors, exchange intellectual ideas, all the while enjoying unlimited quantities of freshly prepared salads, main courses and puddings. After the satisfying meal, I would amble to the adjacent common room, prepare myself a cup of macchiato with their barista-grade coffee machine, sink into their deluxe sofas and read Mathematics.</p>
+            </section>
+            <section class="content-section">
+                <h2>My Philosophy</h2>
+                <p>I believe in giving users full control what they see and do on websites. No more random pop-ups, hidden keyboard shortchuts, distracting animations, or anything that gets in the way of the user's experience.</p>
+                <p>I prioritize user's first impressions. Clear next steps, transparent error messages, and always allowing users to go back.</p>
+                <p>Clean. Fast. Simple.</p>
             </section>
 
             <section class="content-section">
-                <h2>Skills & Expertise</h2>
-                <p>Trained as a mathematician, I am always keen to solve new problems. The last 3 years have mostly been focused on building an aesthetic front-end with JavaScript/TypeScript while optimizing for speed. In addition to programming languages, I am also conversational in various foreign languages.</p>
-                <ul>
-                    <li><strong>Frontend:</strong> JavaScript, TypeScript, THREE.js, React, HTML5, CSS3</li>
-                    <li><strong>Backend:</strong> API Development, Node.js, Database Design</li>
-                    <li><strong>3D Graphics:</strong> THREE.js, WebGL, 3D Visualization</li>
-                    <li><strong>Mathematics:</strong> Applied Mathematics, Physics, Machine Learning</li>
-                    <li><strong>Leadership:</strong> Team Leadership, Technical Mentoring, Knowledge Sharing</li>
-                    <li><strong>Languages:</strong> Multiple foreign languages (conversational)</li>
-                </ul>
+                <h2>Hopes and Dreams</h2>
+                <p>For now I'll just dump my thoughts here. I'd like to become a better writer, photographer, designer, partner.</p>
             </section>
 
-            <section class="content-section">
-                <h2>Experience</h2>
-                
-                <div class="job-info">
-                    <div class="job-header">
-                        <img src="logos/opensolar.png" alt="OpenSolar" class="company-logo">
-                        <div>
-                            <h3>Senior Software Engineer at OpenSolar</h3>
-                            <p class="job-location">📍 Remote in Hong Kong | June 2025 - Present</p>
-                        </div>
-                    </div>
-                    <p>I work remotely for OpenSolar, the leading software tool in Australia for solar grid installers. My role spans both frontend and backend development:</p>
-                    <ul>
-                        <li><strong>Frontend Development:</strong> Building the 3D Studio using THREE.js for immersive solar system visualization</li>
-                        <li><strong>Backend Development:</strong> Creating API endpoints for solar partners and system integration</li>
-                        <li><strong>Technical Leadership:</strong> Contributing to architectural decisions and best practices</li>
-                    </ul>
-                </div>
 
-                <div class="job-info">
-                    <div class="job-header">
-                        <img src="logos/midsummer.jpg" alt="Midsummer Energy" class="company-logo">
-                        <div>
-                            <h3>Web Developer at Midsummer Energy</h3>
-                            <p class="job-location">📍 Cambridge, England | June 2022 - March 2025</p>
-                        </div>
-                    </div>
-                    <p>I led a team of junior developers where we worked on 2D and 3D editors to create roofs and buildings, add solar panels, and calculate financial payback. I also organized fortnightly talks to encourage knowledge sharing among team members.</p>
-                    <ul>
-                        <li><strong>Leadership:</strong> Led team of junior developers</li>
-                        <li><strong>3D Development:</strong> Built 2D and 3D editors for solar panel placement</li>
-                        <li><strong>Financial Modeling:</strong> Developed payback calculation systems</li>
-                        <li><strong>Knowledge Sharing:</strong> Organized fortnightly technical talks</li>
-                    </ul>
-                </div>
-
-                <div class="job-info">
-                    <div class="job-header">
-                        <img src="logos/cambridge.png" alt="University of Cambridge" class="company-logo">
-                        <div>
-                            <h3>Mathematics Supervisor at University of Cambridge</h3>
-                            <p class="job-location">📍 Cambridge, England | September 2019 - June 2022</p>
-                        </div>
-                    </div>
-                    <p>I taught first-year and second-year undergraduates in applied Mathematics and physics: Differential Equations, Matrices, Quantum Mechanics, Electromagnetism and more. I was also on the panel for the undergraduate admissions interviews for Downing College.</p>
-                    <ul>
-                        <li><strong>Teaching:</strong> Applied Mathematics and Physics to undergraduates</li>
-                        <li><strong>Subjects:</strong> Differential Equations, Matrices, Quantum Mechanics, Electromagnetism</li>
-                        <li><strong>Admissions:</strong> Panel member for undergraduate admissions interviews</li>
-                    </ul>
-                </div>
-
-                <div class="job-info">
-                    <div class="job-header">
-                        <img src="logos/lbbw.jpg" alt="Landesbank Baden-Württemberg" class="company-logo">
-                        <div>
-                            <h3>Intern Data Analyst at Landesbank Baden-Württemberg</h3>
-                            <p class="job-location">📍 London, England | June 2016 - September 2016</p>
-                        </div>
-                    </div>
-                    <p>I made predictions for bond sales and purchases based on a large training data set (100,000+ entries) using Machine Learning techniques such as random forest and XGBoost. The code was written in the statistical package R.</p>
-                    <ul>
-                        <li><strong>Machine Learning:</strong> Random Forest, XGBoost algorithms</li>
-                        <li><strong>Data Analysis:</strong> Large dataset analysis (100,000+ entries)</li>
-                        <li><strong>Financial Modeling:</strong> Bond sales and purchase predictions</li>
-                        <li><strong>Programming:</strong> Statistical analysis in R</li>
-                    </ul>
-                </div>
-
-                <div class="job-info">
-                    <div class="job-header">
-                        <img src="logos/sparx.png" alt="Sparx" class="company-logo">
-                        <div>
-                            <h3>Intern Content Scientist at Sparx</h3>
-                            <p class="job-location">📍 Exeter, England | June 2015 - September 2015</p>
-                        </div>
-                    </div>
-                    <p>I helped develop an educational iPad app that aims to teach children GCSE Mathematics. My role was to write questions pedagogically and to analyse the data from the students' attempts using the statistical language R.</p>
-                    <ul>
-                        <li><strong>Educational Technology:</strong> Developed iPad app for GCSE Mathematics</li>
-                        <li><strong>Pedagogy:</strong> Designed educational content and questions</li>
-                        <li><strong>Data Analysis:</strong> Analyzed student performance data</li>
-                        <li><strong>Programming:</strong> Statistical analysis in R</li>
-                    </ul>
-                </div>
-            </section>
-
-            <section class="content-section">
-                <h2>Education</h2>
-                
-                <div class="education-item">
-                    <div class="education-header">
-                        <img src="logos/cambridge.png" alt="University of Cambridge" class="education-logo">
-                        <div>
-                            <h3>University of Cambridge</h3>
-                            <p class="education-details">Mathematics - MA, MMath, Class I, Distinction</p>
-                            <p class="education-period">2012 - 2016</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="education-item">
-                    <div class="education-header">
-                        <img src="logos/bath.png" alt="University of Bath" class="education-logo">
-                        <div>
-                            <h3>University of Bath</h3>
-                            <p class="education-details">Mathematics - MRes, MPhil, Distinction</p>
-                            <p class="education-period">2016 - 2019</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="education-item">
-                    <div class="education-header">
-                        <img src="logos/cis.jpeg" alt="Chinese International School" class="education-logo">
-                        <div>
-                            <h3>Chinese International School, Hong Kong</h3>
-                            <p class="education-details">International Baccalaureate, 43/45</p>
-                            <p class="education-period">2006 - 2012</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
         </div>
     </main>
 
