--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="cv.html">CV</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
             <div class="hamburger">
@@ -42,7 +43,7 @@
         <div class="container">
             <section class="content-section">
                 <h2>Welcome to My Portfolio</h2>
-                <p>Hello! I'm Daniel, a passionate developer and creative problem-solver. I love building innovative solutions and exploring new technologies.</p>
+                <p>Hi there! I'm Daniel, a passionate developer originally trained as a mathematician. In my spare time I love learning languages.</p>
                 <p>With a background in software development and a keen eye for design, I enjoy creating elegant solutions that make a difference. I believe in continuous learning and pushing the boundaries of what's possible.</p>
                 <p>When I'm not coding, you can find me exploring new technologies, contributing to open source projects, or sharing knowledge with the developer community.</p>
             </section>
