--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <div class="logo"><a href="index.html">Daniel Ng</a></div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="active">About</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
