--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="cv.html">CV</a></li>
+                <li><a href="cv.html" class="active">CV</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
             <div class="hamburger">
