--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="container">
             <div class="logo">Daniel Ng</div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="projects.html">Projects</a></li>
