--- a/projects.html
+++ b/projects.html
@@ -10,20 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="container">
-            <div class="logo"><a href="index.html">Daniel Ng</a></div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="projects.html" class="active">Projects</a></li>
-            </ul>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </nav>
+        <!--#include virtual="nav.html" -->
     </header>
 
     <main>
