--- a/about.html
+++ b/about.html
@@ -7,10 +7,24 @@
     <link rel="preload" href="head-common.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="head-common.css"></noscript>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preload" href="images/daniel_hood.jpeg" as="image" type="image/jpeg">
 </head>
 <body>
     <header>
-        <!--#include virtual="nav.html" -->
+        <nav class="container">
+            <div class="logo"><a href="index.html">Daniel Ng</a></div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="projects.html">Projects</a></li>
+            </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
     </header>
 
     <main>
@@ -18,7 +32,7 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
-                        <img src="images/daniel_hood.jpeg" alt="Daniel's profile picture">
+                        <img src="images/daniel_hood.jpeg" alt="Daniel's profile picture" loading="eager" fetchpriority="high">
                     </div>
                     <h1>About Me</h1>
                     <p>Get to know me better and learn about my journey in technology.</p>
