--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,20 @@
 </head>
 <body>
     <header>
-        <!--#include virtual="nav.html" -->
+        <nav class="container">
+            <div class="logo"><a href="index.html">Daniel Ng</a></div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="projects.html">Projects</a></li>
+            </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
     </header>
 
     <main>
