--- a/cv.html
+++ b/cv.html
@@ -54,86 +54,63 @@
                 <h2>Experience</h2>
                 
                 <div class="job-info">
-                    <div class="job-header">
+                    <div class="job-content">
                         <img src="logos/opensolar.png" alt="OpenSolar" class="company-logo">
-                        <div>
+                        <div class="job-text">
                             <h3>Senior Software Engineer at OpenSolar</h3>
-                            <p class="job-location">📍 Remote in Hong Kong | June 2025 - Present</p>
+                            <p class="job-location">📍 Remote in Hong Kong</p>
+                            <p class="job-period">📅 June 2025 - Present</p>
+                            <p>I work remotely for OpenSolar, the leading software tool in Australia for solar grid installers. My role spans both frontend and backend development, building the 3D Studio using THREE.js for immersive solar system visualization and creating API endpoints for solar partners and system integration.</p>
                         </div>
                     </div>
-                    <p>I work remotely for OpenSolar, the leading software tool in Australia for solar grid installers. My role spans both frontend and backend development:</p>
-                    <ul>
-                        <li><strong>Frontend Development:</strong> Building the 3D Studio using THREE.js for immersive solar system visualization</li>
-                        <li><strong>Backend Development:</strong> Creating API endpoints for solar partners and system integration</li>
-                        <li><strong>Technical Leadership:</strong> Contributing to architectural decisions and best practices</li>
-                    </ul>
                 </div>
 
                 <div class="job-info">
-                    <div class="job-header">
+                    <div class="job-content">
                         <img src="logos/midsummer.jpg" alt="Midsummer Energy" class="company-logo">
-                        <div>
+                        <div class="job-text">
                             <h3>Web Developer at Midsummer Energy</h3>
-                            <p class="job-location">📍 Cambridge, England | June 2022 - March 2025</p>
+                            <p class="job-location">📍 Cambridge, England</p>
+                            <p class="job-period">📅 June 2022 - March 2025</p>
+                            <p>I led a team of junior developers where we worked on 2D and 3D editors to create roofs and buildings, add solar panels, and calculate financial payback. I also organized fortnightly talks to encourage knowledge sharing among team members.</p>
                         </div>
                     </div>
-                    <p>I led a team of junior developers where we worked on 2D and 3D editors to create roofs and buildings, add solar panels, and calculate financial payback. I also organized fortnightly talks to encourage knowledge sharing among team members.</p>
-                    <ul>
-                        <li><strong>Leadership:</strong> Led team of junior developers</li>
-                        <li><strong>3D Development:</strong> Built 2D and 3D editors for solar panel placement</li>
-                        <li><strong>Financial Modeling:</strong> Developed payback calculation systems</li>
-                        <li><strong>Knowledge Sharing:</strong> Organized fortnightly technical talks</li>
-                    </ul>
                 </div>
 
                 <div class="job-info">
-                    <div class="job-header">
+                    <div class="job-content">
                         <img src="logos/cambridge.png" alt="University of Cambridge" class="company-logo">
-                        <div>
+                        <div class="job-text">
                             <h3>Mathematics Supervisor at University of Cambridge</h3>
-                            <p class="job-location">📍 Cambridge, England | September 2019 - June 2022</p>
+                            <p class="job-location">📍 Cambridge, England</p>
+                            <p class="job-period">📅 September 2019 - June 2022</p>
+                            <p>I taught first-year and second-year undergraduates in applied Mathematics and physics: Differential Equations, Matrices, Quantum Mechanics, Electromagnetism and more. I was also on the panel for the undergraduate admissions interviews for Downing College.</p>
                         </div>
                     </div>
-                    <p>I taught first-year and second-year undergraduates in applied Mathematics and physics: Differential Equations, Matrices, Quantum Mechanics, Electromagnetism and more. I was also on the panel for the undergraduate admissions interviews for Downing College.</p>
-                    <ul>
-                        <li><strong>Teaching:</strong> Applied Mathematics and Physics to undergraduates</li>
-                        <li><strong>Subjects:</strong> Differential Equations, Matrices, Quantum Mechanics, Electromagnetism</li>
-                        <li><strong>Admissions:</strong> Panel member for undergraduate admissions interviews</li>
-                    </ul>
                 </div>
 
                 <div class="job-info">
-                    <div class="job-header">
+                    <div class="job-content">
                         <img src="logos/lbbw.jpg" alt="Landesbank Baden-Württemberg" class="company-logo">
-                        <div>
+                        <div class="job-text">
                             <h3>Intern Data Analyst at Landesbank Baden-Württemberg</h3>
-                            <p class="job-location">📍 London, England | June 2016 - September 2016</p>
+                            <p class="job-location">📍 London, England</p>
+                            <p class="job-period">📅 June 2016 - September 2016</p>
+                            <p>I made predictions for bond sales and purchases based on a large training data set (100,000+ entries) using Machine Learning techniques such as random forest and XGBoost. The code was written in the statistical package R.</p>
                         </div>
                     </div>
-                    <p>I made predictions for bond sales and purchases based on a large training data set (100,000+ entries) using Machine Learning techniques such as random forest and XGBoost. The code was written in the statistical package R.</p>
-                    <ul>
-                        <li><strong>Machine Learning:</strong> Random Forest, XGBoost algorithms</li>
-                        <li><strong>Data Analysis:</strong> Large dataset analysis (100,000+ entries)</li>
-                        <li><strong>Financial Modeling:</strong> Bond sales and purchase predictions</li>
-                        <li><strong>Programming:</strong> Statistical analysis in R</li>
-                    </ul>
                 </div>
 
                 <div class="job-info">
-                    <div class="job-header">
+                    <div class="job-content">
                         <img src="logos/sparx.png" alt="Sparx" class="company-logo">
-                        <div>
+                        <div class="job-text">
                             <h3>Intern Content Scientist at Sparx</h3>
-                            <p class="job-location">📍 Exeter, England | June 2015 - September 2015</p>
+                            <p class="job-location">📍 Exeter, England</p>
+                            <p class="job-period">📅 June 2015 - September 2015</p>
+                            <p>I helped develop an educational iPad app that aims to teach children GCSE Mathematics. My role was to write questions pedagogically and to analyse the data from the students' attempts using the statistical language R.</p>
                         </div>
                     </div>
-                    <p>I helped develop an educational iPad app that aims to teach children GCSE Mathematics. My role was to write questions pedagogically and to analyse the data from the students' attempts using the statistical language R.</p>
-                    <ul>
-                        <li><strong>Educational Technology:</strong> Developed iPad app for GCSE Mathematics</li>
-                        <li><strong>Pedagogy:</strong> Designed educational content and questions</li>
-                        <li><strong>Data Analysis:</strong> Analyzed student performance data</li>
-                        <li><strong>Programming:</strong> Statistical analysis in R</li>
-                    </ul>
                 </div>
             </section>
 
@@ -141,9 +118,9 @@
                 <h2>Education</h2>
                 
                 <div class="education-item">
-                    <div class="education-header">
+                    <div class="education-content">
                         <img src="logos/cambridge.png" alt="University of Cambridge" class="education-logo">
-                        <div>
+                        <div class="education-text">
                             <h3>University of Cambridge</h3>
                             <p class="education-details">Mathematics - MA, MMath, Class I, Distinction</p>
                             <p class="education-period">2012 - 2016</p>
@@ -152,9 +129,9 @@
                 </div>
 
                 <div class="education-item">
-                    <div class="education-header">
+                    <div class="education-content">
                         <img src="logos/bath.png" alt="University of Bath" class="education-logo">
-                        <div>
+                        <div class="education-text">
                             <h3>University of Bath</h3>
                             <p class="education-details">Mathematics - MRes, MPhil, Distinction</p>
                             <p class="education-period">2016 - 2019</p>
@@ -163,9 +140,9 @@
                 </div>
 
                 <div class="education-item">
-                    <div class="education-header">
+                    <div class="education-content">
                         <img src="logos/cis.jpeg" alt="Chinese International School" class="education-logo">
-                        <div>
+                        <div class="education-text">
                             <h3>Chinese International School, Hong Kong</h3>
                             <p class="education-details">International Baccalaureate, 43/45</p>
                             <p class="education-period">2006 - 2012</p>
